Day-8/vpc/transt.tf
#resource "aws_ec2_transit_gateway" "transit" {
#  count = 1
#  tags = {
#    Name = "cgit-transit"
#  }
#}
